<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".MainActivity">

        <EditText
            android:id="@+id/etNumber1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstNumber"
            android:layout_marginBottom="8dp"
            android:inputType="numberDecimal"
            android:autofillHints="@string/firstNumber" />
        <EditText
            android:id="@+id/etNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondNumber"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"

            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_margin="8dp"
                android:textSize="28sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                android:layout_margin="8dp"
                android:textSize="28sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mul"
                android:layout_margin="8dp"
                android:textSize="28sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:layout_margin="8dp"
                android:textSize="28sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/result"
            android:textSize="28sp"
            />

</LinearLayout>